Add game loop functions; fix joystick errors and describe found bug
Minor: fix table>p spacing, add links to front page, issues in footer

--- a/src/config/_default/params.toml
+++ b/src/config/_default/params.toml
@@ -4,4 +4,5 @@ dataTableHeaderFreq = 15
 enableNav = true
 gitCloneUrl = "https://github.com/smitelli/cosmodoc.git"
 gitContentUrl = "https://github.com/smitelli/cosmodoc/tree/main/src/content"
+gitIssuesUrl = "https://github.com/smitelli/cosmodoc/issues"
 subtitle = "The semi-complete teardown of Cosmo's Cosmic Adventure"
